fixed layout issues

--- a/frontend/assets/scss/_resourceSection.scss
+++ b/frontend/assets/scss/_resourceSection.scss
@@ -41,6 +41,9 @@ h3 {
 .card--header h3 {
   color: #f39200;
 }
+.card--icon i {
+  font-size: 2rem;
+}
 
 .resource-cards-left,
 .resource-cards-middle a {
